# gts-demo-agent

./: AGENCY_CARD.yml  AGENCY_README.md  input.json  pyproject.toml
configs/evaluation/echo/: agent_configs.json  template_config.json
data/evaluation/echo/dataset/: sample.1.jsonl
demo/: agency.py
demo/agents/: __init__.py  common.py  echo.py  err.py  eventing.py
demo/common/: config.py  event_manager.py  input.py  logger.py
sandbox/: agency.py
sandbox/agents/: echo.py
sandbox/common/: event_manager.py  io_helper.py
